<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.itl.rfccurpapp.RfcFragment">

    <!-- TODO: Update blank fragment layout -->

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txvApePatC"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ape_pat"
            android:layout_marginRight="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="@+id/guideline2"
            android:layout_marginTop="0dp" />

        <EditText
            android:id="@+id/edtApePat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:inputType="textCapCharacters"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="16dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/txvApePatC"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

        <TextView
            android:id="@+id/txvApeMat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/ape_mat"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtApePat"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/edtApeMat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:inputType="textCapCharacters"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txvApeMat"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

        <EditText
            android:id="@+id/edtName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:inputType="textCapCharacters"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txvName"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

        <TextView
            android:id="@+id/txvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtApeMat"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="0.0" />

        <TextView
            android:id="@+id/txvFecN"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/fecha"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtName"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="0.0" />

        <Spinner
            android:id="@+id/spDia"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="0dp"
            android:layout_marginStart="16dp"
            android:entries="@array/dias"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guideline9"
            app:layout_constraintTop_toBottomOf="@+id/txvFecN" />

        <TextView
            android:id="@+id/txvD1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="/"
            app:layout_constraintTop_toTopOf="@+id/txvD2"
            app:layout_constraintRight_toLeftOf="@+id/guideline10"
            android:layout_marginRight="0dp"
            android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/guideline9" />

        <Spinner
            android:id="@+id/spMes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="-1dp"
            android:entries="@array/mes"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/guideline10"
            app:layout_constraintRight_toLeftOf="@+id/guideline11"
            app:layout_constraintTop_toBottomOf="@+id/txvFecN" />

        <Spinner
            android:id="@+id/spYear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="0dp"
            android:entries="@array/year"
            app:layout_constraintHorizontal_bias="0.888"
            app:layout_constraintLeft_toLeftOf="@+id/guideline12"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txvFecN" />

        <TextView
            android:id="@+id/txvD2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="/"
            app:layout_constraintTop_toBottomOf="@+id/txvFecN"
            app:layout_constraintRight_toLeftOf="@+id/guideline12"
            android:layout_marginRight="0dp"
            android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/guideline11" />

        <Button
            android:id="@+id/btnObtRFC"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:text="Obtener RFC"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spMes" />

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline9"
            app:layout_constraintGuide_percent="0.3"
            android:orientation="vertical"
            tools:layout_editor_absoluteY="81dp"
            tools:layout_editor_absoluteX="115dp" />

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline10"
            app:layout_constraintGuide_percent="0.35"
            android:orientation="vertical"
            tools:layout_editor_absoluteY="81dp"
            tools:layout_editor_absoluteX="135dp" />

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline11"
            app:layout_constraintGuide_percent="0.6"
            android:orientation="vertical"
            tools:layout_editor_absoluteY="81dp"
            tools:layout_editor_absoluteX="231dp" />

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline12"
            app:layout_constraintGuide_percent="0.65"
            android:orientation="vertical"
            tools:layout_editor_absoluteY="81dp"
            tools:layout_editor_absoluteX="250dp" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="77dp" />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>
